fix: body x-overflow

--- a/app/[lng]/globals.css
+++ b/app/[lng]/globals.css
@@ -21,7 +21,7 @@
 html,
 body {
   min-height: 100vh;
-  min-width: 100vw;
+  min-width: 100%;
 }
 
 /* Scrollbar */
@@ -52,9 +52,4 @@ html * {
 /* Text Style */
 h1 span {
   font-weight: 800;
-}
-
-/* ----------------- to fix ----------------- */
-body {
-  overflow-x: hidden;
 }
